able to add items to list array via input field; field empties upon click

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>todo react</title>
+    <title>Todo React</title>
     <style>
       body{
         background-color:pink;
+        font-family: "Arial", sans-serif;
       }
     </style>
 </head>
 <body>
-<h1>Wow, Todo!</h1>
+<h1>To-do List</h1>
 <div id="app"></div>
 </body>
 </html>
